update chat feedback

--- a/senpick/app/templates/chat.html
+++ b/senpick/app/templates/chat.html
@@ -592,7 +592,7 @@
                     chatHistory.appendChild(recommend);
 
                     // feedback 버튼 추가
-                    if (data.recommend_input){
+                    if (data.products){
                       const feedbackInput = document.createElement('div');
                       feedbackInput.className = 'feedback-input';
 
