--- a/senpick/app/templates/birth.html
+++ b/senpick/app/templates/birth.html
@@ -77,6 +77,7 @@
                             brand: product.brand,
                             title: product.title,
                             reason: product.reason,
+                            link: product.product_url,
                         });
                     });
                 })
