--- a/senpick/static/css/chat.css
+++ b/senpick/static/css/chat.css
@@ -4,14 +4,16 @@ body {
   font-family: 'Spoqa Han Sans Neo', 'sans-serif';
   height: 100%;
 }
+
 .app-layout {
   display: flex;
   min-height: 100vh;
   min-width: 0;
   width: 100%;
 }
+
 .main-content {
-  flex: 1 1 0%; /* ← 확실하게! */
+  flex: 1 1 0%;
   min-width: 0;
   display: flex;
   flex-direction: column;
@@ -21,6 +23,7 @@ body {
   height: 100vh;
   padding: 0;
 }
+
 /* 상단 인삿말/부제 */
 .chatbot-header {
   width: 700px;
@@ -39,11 +42,13 @@ body {
   margin-top: 0;
   margin-bottom: 10px;
 }
+
 .chatbot-header p {
   font-size: 20px;
   color: #666;
   font-weight: 500;
 }
+
 /* 채팅 카드 */
 .chatbot-body {
   width: 816px;
@@ -69,7 +74,6 @@ body {
   padding: 32px;
   margin-bottom: 18px;
   overflow-y: auto;
-  /* gap: 13px; */
   scrollbar-width: none;
   -ms-overflow-style: none;
   display: flex;
@@ -88,13 +92,9 @@ body {
   margin: 40px auto 0 0;  
   padding: 20px;
   white-space: pre-wrap;
-
   background: #ffffff;
   color: #2e2e2e;
-
   border-radius: 20px;
-  /* box-shadow: 0 2px 10px rgba(44, 44, 44, 0.05); */
-
   font-size: 15px;
   line-height: 1.4;
   word-break: break-word;
@@ -109,12 +109,12 @@ body {
   margin-right: 0;
   text-align: right;
 
-  align-self: flex-end; /* Flex 컨테이너 내에서 오른쪽 정렬 */
+  align-self: flex-end;
 }
 
 /* 입력창+버튼 (바깥 띄우기) */
 .chat-input-form {
-  width: 754px;              /* 전체 고정 너비 */
+  width: 754px;
   margin: 0 auto 36px auto;
   position: relative;
   display: none;
@@ -153,9 +153,8 @@ body {
   margin-bottom: 20px; 
 }
 
-/* 전송 버튼 */
 .chat-send-btn {
-  position: static; /* 플로팅 제거 */
+  position: static;
   background: #2e2e2e;
   color: #fff;
   border: none;
@@ -169,7 +168,7 @@ body {
   font-size: 20px;
   box-shadow: 0 2px 8px rgba(60,60,60,0.10);
   z-index: 2;
-  transition: background 0.18s;
+  transition: background-color 0.18s;
   padding: 0;
 }
 
@@ -192,7 +191,6 @@ body {
   border: none;
   border-radius: 72px;
   width:fit-content;
-  /* height: 44px; */
   display: inline-block;
   padding: 7px 15px;
   font-size: 14px;
