--- a/senpick/static/css/profile_delete.css
+++ b/senpick/static/css/profile_delete.css
@@ -1,15 +1,10 @@
-/* profile_delete.css */
-
 html {
   scroll-behavior: smooth;
 }
 
-/* 카드 본체 */
 .modal-card {
   background: #fff;
   border-radius: 16px;
-  /* box-shadow: 0 4px 32px rgba(0,0,0,0.1); */
-  /* padding: 50px; */
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -18,7 +13,6 @@ html {
   text-align: center;
 }
 
-/* 사유(라디오+텍스트) */
 .withdraw-reason label {
   display: flex;
   align-items: center;
@@ -42,11 +36,11 @@ html {
   background-color: #FFFFFF;
   transition: all 0.2s ease;
 }
+
 .withdraw-reason input[type="text"]:hover {
   border-color: #999;
 }
 
-/* 경고문구 */
 .warning {
   margin: 16px 0;
   text-align: center;
@@ -55,15 +49,6 @@ html {
   line-height: 1.4;
 }
 
-/* 버튼 영역 */
-/* .modal-buttons {
-  display: flex;
-  gap: 10px;
-  margin-top: 12px;
-  justify-content: center;
-} */
-
-/* 취소 버튼 */
 .modal-buttons .cancel-btn {
   flex: 1;
   background: #f5f5f5;
@@ -73,17 +58,15 @@ html {
   padding: 10px 0;
   font-size: 15px;
   cursor: pointer;
-  transition: background 0.15s;
+  transition: background-color 0.15s;
   height: 45px;
   max-width: 500px;
 }
 
 .modal-buttons:hover .cancel-btn {
-  /* background: #FFE900; */
   font-weight: bold;
 }
 
-/* 탈퇴하기 버튼 */
 .modal-buttons .confirm-btn {
   flex: 1;
   background: #222;
@@ -93,7 +76,7 @@ html {
   padding: 10px 0;
   font-size: 15px;
   cursor: pointer;
-  transition: background 0.15s;
+  transition: background-color 0.15s;
 }
 
 .modal-buttons .confirm-btn:hover {
@@ -228,10 +211,6 @@ label.step-option.step-option-other.active {
   align-items: center;
   gap: 20px;
   margin-top: 32px;
-  /* width: 500px; */
-  /* height: 45px; */
-  /* background-color: #F5F5F8;
-  border-radius: 12px; */
   transition: background-color 0.2s ease;
   align-self: center;
 }
