--- a/senpick/static/css/style.css
+++ b/senpick/static/css/style.css
@@ -10,8 +10,6 @@ html, body {
     height: 100vh;
     overflow: hidden;
     font-family: 'Spoqa Han Sans Neo', 'sans-serif';
-    /* font-family: Arial, sans-serif;
-    background-color: #f4f4f4; */
 }
 
 button {
@@ -19,7 +17,6 @@ button {
 }
 
 .main-content {
-    /* padding: 20px; */
     width: 100%;
     overflow-x: hidden;
 }
@@ -44,14 +41,13 @@ button {
 
   position: absolute;
   z-index: 10;
-  top: 100%; /* 아래쪽에 툴팁이 표시되도록 변경 */
-  bottom: auto; /* 기존 bottom 값 무효화 */
+  top: 100%;
+  bottom: auto;
   left: 50%;
   transform: translateX(-50%);
   opacity: 0;
   transition: opacity 0.3s;
 
-  /* ✅ 그림자 추가 */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -60,7 +56,6 @@ button {
   opacity: 1;
 }
 
-
 .card-wrapper {
   margin-top: 8px;
   display: flex;
@@ -68,8 +63,6 @@ button {
   gap: 8px;
   overflow-y: auto;
   flex-shrink: 0;
-  /* Adjust height based on header */
-  /* height: calc(100vh - 80px);  */
 }
 
 .product-card {
@@ -77,7 +70,6 @@ button {
   border-radius: 12px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
   text-align: left;;
-  /* overflow: hidden; */
   font-family: sans-serif;
   background: #FFFFFF;
   padding: 12px;
@@ -113,6 +105,7 @@ button {
   color: #999;
   margin-bottom: 2px;
   display: -webkit-box;
+  line-clamp: 1;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -125,7 +118,7 @@ button {
   font-weight: 500;
   line-height: 1.4;
   color: #222;
-
+  line-clamp: 1;
   display: -webkit-box;
   -webkit-line-clamp: 2;       /* 최대 2줄 */
   -webkit-box-orient: vertical;
@@ -152,12 +145,15 @@ button {
   font-size: 16px;
   color: #ccc;
 }
+
 @keyframes spin {
   100% { transform: rotate(360deg); }
 }
+
 .spin {
   animation: spin 2s linear infinite;
 }
+
 .font-b {
     font-family: 'Cafe24Supermagic', sans-serif;
 }
